--- a/k8s/frontend-service.yaml
+++ b/k8s/frontend-service.yaml
@@ -5,7 +5,8 @@ metadata:
 spec:
   type: NodePort
   ports:
-    - port: 80
+  - port: 80
     targetPort: 80
+    nodePort: 30303
   selector:
     app: frontend
