--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: frontend-deployment
+  namespace: diyar-ns
 spec:
   replicas: 1
   strategy:
@@ -20,7 +21,7 @@ spec:
           imagePullPolicy: Always
           name: frontend
           ports:
-            - containerPort: 80
+            - containerPort: 3000
           resources:
             limits:
               memory: "333Mi"
